k8s/base/game-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-server
  namespace: arena
  annotations:
    cloud.google.com/backend-config: '{"default": "game-server-backend-config"}'
spec:
  type: ClusterIP
  selector:
    app: game-server
  ports:
    - port: 80
      targetPort: 8080
